Add User and Login Model

--- a/MvcRepositoryPatternDemo/appsettings.json
+++ b/MvcRepositoryPatternDemo/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=j2m-001; Database=Test_Zalak; User ID=devteam; Password=devteam; TrustServerCertificate=True;"
+  },
+  "JWT": {
+    "Issure": "https://localhost:7003",
+    "Audience": "https://localhost:7003",
+    "Key": "fheiusdhrgfsefse0rfwe228754"
   }
 }
